--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
             <img src="images/my-bg.png" alt="">
         </div>
     </section>
+    <section class="section-one section-two">
+        <div class="half-one">
+            <img src="images/my-bg2.png" alt="">
+        </div>
+        <div class="half-one">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="add-button" href="http://facebook.com" target="_blank" rel="noopener noreferrer">DOWNLOAD
+                RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
