--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="section-one">
+    <section class="section-one flexible">
         <div class="half-one">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">MD SHAMIM HOSSAIN</span> WORLD</h1>
@@ -27,7 +27,7 @@
             <img src="images/my-bg.png" alt="">
         </div>
     </section>
-    <section class="section-one section-two">
+    <section class="section-two flexible">
         <div class="half-one">
             <img src="images/my-bg2.png" alt="">
         </div>
@@ -41,19 +41,19 @@
         </div>
     </section>
 
-    <section>
-        <h1>Experence</h1>
-        <div class="section-three">
-            <div class="full-stack">
-                <h1>Full Stack Web Developer</h1>
+    <section class="experience-area">
+        <h1 class="exp">Experence</h1>
+        <div class="flexible">
+            <div id="full-stack" class="full-stack">
+                <h2>Full Stack Web Developer</h2>
                 <h3>2022-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
                     Vue
                     JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="baby-web">
-                <h1>Baby Web Developer</h1>
+            <div id="baby-web" class="full-stack">
+                <h2>Baby Web Developer</h2>
                 <h3>2020-2021 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
                     showed
@@ -62,5 +62,8 @@
         </div>
     </section>
 </body>
+<footer>
+    <p class="foot">© Md Shamim Hossain 2022, A Programming Hero initiative.</p>
+</footer>
 
 </html>
